@@ -1,3 +1,15 @@
+2013-08-30  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tcl.h:	Bump version number to 8.6.1.
+	* library/init.tcl:
+	* unix/configure.in:
+	* win/configure.in:
+	* unix/tcl.spec:
+	* README:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2013-08-03  Donal Fellows  <dkf@users.sf.net>
 
 	* library/auto.tcl: [Patch 3611643]: Allow TclOO classes to be found
